--- a/troppotardi/public/css/base.css
+++ b/troppotardi/public/css/base.css
@@ -6,7 +6,7 @@
 body {
     margin:3px 0 20px 0;
     color:#191919;
-    font-family:"Courier New", Courier, monospace;
+    font-family:Consolas, Inconsolata, monospace;
 }
 
 a, a:visited {
