--- a/troppotardi/public/css/base.css
+++ b/troppotardi/public/css/base.css
@@ -3,11 +3,16 @@
     color: red;
 }
 
+html {
+    height:100%;
+}
+
 body {
-    margin:3px 0 20px 0;
+    margin:0;
     color:#191919;
     /*font-family:Consolas, Inconsolata, "Courier New", Courier, monospace;*/
     font-family: Arial, Helvetica, sans-serif;
+    height:100%;
 }
 
 a, a:visited {
@@ -15,12 +20,20 @@ a, a:visited {
     text-decoration:none;
 }
 
+#wrapper {
+    min-height: 100%;
+    height: auto !important;
+    height: 100%;
+    margin: 0 auto -34px;
+    padding:0;
+}
+
 #container {
     position:relative;
     width:690px;
     left:50%;
-    margin-left:-350px;
-    padding:5px;
+    padding:3px 5px 0 5px;
+    margin: 0 0 0 -350px;
 }
 
 #image {
@@ -85,11 +98,18 @@ img {
 }
 
 #footer {
-    clear:both;
     text-align:center;
     font-size:15px;
-    margin-top:15px;
+    margin:0;
     font-size:90%;
+    height: 18px;
+    padding:8px 0;
+}
+
+#push {
+    height: 34px;
+    margin:0;
+    clear:both;
 }
 
 #footer a {
@@ -244,4 +264,19 @@ p {
 
 #flickrlink {
     color: #ff0088;
+}
+
+#joinus_contributors {
+    padding:0;
+    margin:0;
+}
+
+#joinus_contributors h2 {
+    text-align:center;
+    font-weight:bold;
+    font-size:1.2em;
+}
+
+#joinus_contributors ul {
+    font-weight: bold;
 }
