--- a/troppotardi/public/css/base.css
+++ b/troppotardi/public/css/base.css
@@ -10,7 +10,6 @@ html {
 body {
     margin:0;
     color:#191919;
-    /*font-family:Consolas, Inconsolata, "Courier New", Courier, monospace;*/
     font-family: Arial, Helvetica, sans-serif;
     height:100%;
 }
@@ -19,6 +18,8 @@ a, a:visited {
     color:#191919;
     text-decoration:none;
 }
+
+/* Base layout */
 
 #wrapper {
     min-height: 100%;
@@ -36,14 +37,34 @@ a, a:visited {
     margin: 0 0 0 -450px;
 }
 
-#image {
-    margin:5px 0 0 0;
-}
-
 img {
     border:none;
 }
 
+#footer {
+    text-align:center;
+    font-size:15px;
+    margin:0;
+    font-size:90%;
+    height: 18px;
+    padding:8px 0;
+}
+
+#push {
+    height: 34px;
+    margin:0;
+    clear:both;
+}
+
+#footer a {
+    text-decoration:none;
+}
+
+#footer a:hover {
+    color:#555555;
+}
+
+/* Stuff for show.mako */
 #text {
     font-size:120%;
     margin:8px 0 0 0;
@@ -101,28 +122,15 @@ img {
     color: #555555;
 }
 
-#footer {
+#img_div {
     text-align:center;
-    font-size:15px;
-    margin:0;
-    font-size:90%;
-    height: 18px;
-    padding:8px 0;
 }
 
-#push {
-    height: 34px;
-    margin:0;
-    clear:both;
+#image {
+    margin:5px 0 0 0;
 }
 
-#footer a {
-    text-decoration:none;
-}
-
-#footer a:hover {
-    color:#555555;
-}
+/* Stuff for submit.mako */
 
 #submit-form li {
     list-style:none;
@@ -176,21 +184,11 @@ img {
     font-weight:bold;
 }
 
-#img_div {
-    text-align:center;
-}
-
-#img_helpers {
-    text-align:center;
-    width:690px;
-    margin:0;
-    padding-bottom:10px;
-    padding-top:0;
-}
-
 .captcha {
     padding-left: 155px;
 }
+
+/* Stuff for months.mako */
 
 #months {
     padding-bottom: 10px;
@@ -234,6 +232,7 @@ img {
     visibility:hidden;
 }
 
+/* Stuff for the static pages */
 #about {
     font-size:110%;
 }
@@ -270,19 +269,4 @@ p {
 
 #flickrlink {
     color: #ff0088;
-}
-
-#joinus_contributors {
-    padding:0;
-    margin:0;
-}
-
-#joinus_contributors h2 {
-    text-align:center;
-    font-weight:bold;
-    font-size:1.2em;
-}
-
-#joinus_contributors ul {
-    font-weight: bold;
 }
