--- a/troppotardi/public/css/base.css
+++ b/troppotardi/public/css/base.css
@@ -11,35 +11,24 @@ body {
     margin:0;
     color:#191919;
     font-family: Arial, Helvetica, sans-serif;
-    height:100%;
     padding:0;
+    background-image:url('/layout_images/right_border.png');
+    background-repeat:repeat-y;
+    background-position:right;
+}
+
+a {
+    text-decoration:none;
 }
 
 /* Base layout */
 
-#wrapper {
-    min-height: 100%;
-    height: auto !important;
-    height: 100%;
-    margin: 0 auto -34px;
-    padding:0;
-    border-right:10px solid black;
-}
-
 #container {
     position:relative;
     width:890px;
-    padding:0 5px 0 0;
+    padding:5px 20px 37px 0;
     float:right;
-}
-
-#container a, #container a:visited {
-    color:#191919;
-    text-decoration:none;
-}
-
-#container a:hover {
-    color:#555555;
+    text-align:center;
 }
 
 img {
@@ -49,18 +38,15 @@ img {
 #footer {
     text-align:right;
     font-size:15px;
-    margin:0;
     font-size:90%;
     height: 18px;
     padding:8px 15px;
     clear:both;
     background-color:black;
-}
-
-#push {
-    height: 34px;
-    margin:0;
-    clear:both;
+    position:fixed;
+    top:100%;
+    margin:-32px 0 0 -30px;
+    width:100%;
 }
 
 #footer a, #footer a:visited {
@@ -141,6 +127,7 @@ img {
 #months {
     width:872px;
     float:right;
+    margin:0;
 }
 
 #months img {
@@ -191,18 +178,20 @@ p {
 }
 
 #joinus {
-    margin-top:16px;
-    text-align:right;
+    margin-top:0;
+    width:500px;
+    float:right;
 }
 
 #joinus p {
+    font-weight:bold;
     margin:3px 0;
     text-indent:0;
-    text-align:justify;
+    text-align:right;
 }
 
 #joinus_links {
-    text-align:center;
+    text-align:right;
     font-size:110%;
     margin-top:15px;
 }
