--- a/troppotardi/public/css/show.css
+++ b/troppotardi/public/css/show.css
@@ -5,8 +5,8 @@
 }
 
 #right_col {
-    width:200px;
-    padding:0;
+    width:190px;
+    padding:0 0 0 10px;
     margin:0;
     float:right;
     text-align:left;
@@ -14,21 +14,33 @@
 #text {
     font-size:120%;
     margin:0;
-    padding:0 10px;
+    padding:0;
 }
 
-#text a {
-    text-decoration:none;
+#text a, #text a:visited {
+    color:#191919;
 }
 
+#text a:hover {
+    color:#555555;
+}
 
 #prevnext {
     font-weight:bold;
     height:30px;
     text-align:center;
     font-weight:normal;
-    padding:10px 10px 0 10px;
+    padding:10px 0 0 0;
 }
+
+#prevnext a, #prevnext a:visited {
+    color:black;
+}
+
+#prevnext a:hover {
+    color:black;
+}
+
 
 #previous, #next {
     padding:0;
@@ -80,5 +92,5 @@
 }
 
 #main_image {
-    margin:3px 0 0 0;
+    margin:0;
 }
