--- a/troppotardi/public/css/base.css
+++ b/troppotardi/public/css/base.css
@@ -62,6 +62,14 @@ img {
 
 /* Stuff for submit.mako */
 
+#submit-form {
+    text-align:left;
+}
+
+#submit-form a, #submit-form a:visited {
+    color:black;
+}
+
 #submit-form li {
     list-style:none;
     margin:10px 0;
