--- a/troppotardi/public/css/base.css
+++ b/troppotardi/public/css/base.css
@@ -12,9 +12,6 @@ body {
     color:#191919;
     font-family: Arial, Helvetica, sans-serif;
     padding:0;
-    background-image:url('/layout_images/right_border.png');
-    background-repeat:repeat-y;
-    background-position:right;
 }
 
 a {
@@ -26,7 +23,7 @@ a {
 #container {
     position:relative;
     width:700px;
-    padding:5px 20px 37px 0;
+    padding:5px 10px 37px 0;
     float:right;
     text-align:center;
 }
@@ -47,6 +44,7 @@ img {
     top:100%;
     margin:-32px 0 0 -30px;
     width:100%;
+    z-index:10;
 }
 
 #footer a, #footer a:visited {
