Another little fix in the css for show.mako...

--- a/troppotardi/public/css/show.css
+++ b/troppotardi/public/css/show.css
@@ -30,7 +30,7 @@
     height:30px;
     text-align:center;
     font-weight:normal;
-    padding:10px 0 0 0;
+    padding:0;
 }
 
 #prevnext a, #prevnext a:visited {
