--- a/troppotardi/public/css/base.css
+++ b/troppotardi/public/css/base.css
@@ -13,6 +13,7 @@ body {
     /*font-family:Consolas, Inconsolata, "Courier New", Courier, monospace;*/
     font-family: Arial, Helvetica, sans-serif;
     height:100%;
+    background-color:white;
 }
 
 a, a:visited {
